# XPolicyLab

./: .gitignore  README.md  REMOVED_ABSOLUTE_PATHS.md  XPolicyLab.py  debug_env_client.py  model_template.py  pyproject.toml  setup_policy_server.py
policy/A1/A1/: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  train_config.yaml  xpolicylab_train.py
policy/A1/A1/a1/: __init__.py  beam_search.py  checkpoint.py  config.py  hf_molmo.py  html_utils.py  image_vit.py  initialization.py  model.py  optim.py  safetensors_util.py  tokenizer.py  torch_util.py  train.py  util.py
policy/A1/A1/a1/data/: A1_datasets.py  __init__.py  academic_datasets.py  academic_datasets_manual.py  collator.py  data_formatter.py  dataset.py  download_urls.py  iterable_dataset_mixture.py  lerobot_dataset_replace.py  model_preprocessor.py  pixmo_datasets.py
policy/A1/A1/a1/eval/: __init__.py  api_utils.py  evaluators.py  inf_evaluator.py  loss_evaluator.py  math_vista_utils.py  mmmu_eval_utils.py  vqa.py
policy/A1/A1/a1/hf_datasets/: android_control.py
policy/A1/A1/a1/vla/: action_heads.py  affordvla.py  affordvla_early_exit.py  config_loader.py  constants.py  dit_action.py  model_selector.py  modeling_qwen2_custom.py  projectors.py  util.py  value_net.py
policy/A1/A1/configs/: README.md
policy/A1/A1/configs/datasets/: dobot.yaml  libero_4_tasks.yaml  libero_spatial.yaml  pretrain.yaml  rc_open_the_drawer.yaml  rc_put_cup_on_coaster.yaml  robodojo_joint_delta.yaml  vlabench.yaml  xpolicylab_runtime.yaml
policy/A1/A1/configs/experiments/: dobot.yaml  libero_simulation.yaml  pretrain.yaml  rc_open_the_drawer.yaml  rc_put_cup_on_coaster.yaml  robodojo_joint_delta.yaml  vlabench.yaml  xpolicylab_runtime.yaml
policy/A1/A1/configs/models/: libero.yaml  pretrain.yaml  robochallenge.yaml  vlabench.yaml
policy/A1/A1/deploy/: api_client.py  api_server.py  deploy.sh  infer_vla.py
policy/A1/A1/launch_scripts/: eval_captioner.py  eval_downstream.py  eval_vla.py  train_captioner.py  train_multitask_model.py  train_vla.py  utils.py
policy/A1/A1/scripts/: robomind_build_index.sh  train_for_action.py
policy/A1/A1/scripts/slurms/: job.sh  pretrain.sh  submit_job.sh
policy/Abot_M0/abot_m0/: .gitignore  INSTALLATION.md  README.md  pyproject.toml  reproduce_minimal_load.py  requirements.txt  test_data_loading.py  train.sh
policy/Abot_M0/abot_m0/ABot/dataloader/: __init__.py  lerobot_datasets.py
policy/Abot_M0/abot_m0/ABot/model/: tools.py
policy/Abot_M0/abot_m0/constraints/: abot-train-cu121.txt
policy/Abot_M0/abot_m0/scripts/: prepare_lerobot_for_abot.py
policy/GalaxeaVLA/GalaxeaVLA/: LICENSE-G0-PLUS  NOTICE  README.md  pyproject.toml
policy/GalaxeaVLA/GalaxeaVLA/configs/: train.yaml
policy/GalaxeaVLA/GalaxeaVLA/docker/: Dockerfile.dev
policy/GalaxeaVLA/GalaxeaVLA/docs/: dataset.md  fold_towels_user_guideline.md  handover_gift_user_guideline.md  pick_up_anything_user_guideline.md  pp-how_to_set_up_the_network_between_the_host_and_robot.md  pp-permanently_configure_proxy_for_apt.md  pp-ros2_discovery_setup.md
policy/GalaxeaVLA/GalaxeaVLA/scripts/: eval_libero.py  eval_open_loop.py  finetune.py
policy/GalaxeaVLA/GalaxeaVLA/tools/: restore_git_state.py
policy/GalaxeaVLA/GalaxeaVLA/xpolicylab_adapter/: _artifact_paths.sh  convert_to_galaxea_lerobot.py
policy/GigaWorldPolicy/giga_world_policy/: .gitignore  README.md  pyproject.toml
policy/GigaWorldPolicy/giga_world_policy/configs/: joint_action_stage2.py  videopt_stage1.py  xpolicylab_gigaworld.py
policy/GigaWorldPolicy/giga_world_policy/scripts/: comupte_norm_stats.py  convert_xpolicylab_hdf5_to_lerobot.py  fast_norm_stats.py  generate_t5_embeddings.py  train_xpolicylab.py
policy/InternVLA_A1_5/internvla_a1_5/: .gitignore  LICENSE  README.md  pyproject.toml
policy/InternVLA_A1_5/internvla_a1_5/configs/: weight_rules_pretrain.yaml
policy/InternVLA_A1_5/internvla_a1_5/launch/: internvla_a15_finetune_robotwin.sh  internvla_a15_pretrain.sh
policy/InternVLA_A1_5/internvla_a1_5/tutorials/: finetune_internvla_a1_5_with_robotwin.md  finetune_on_lerobot_v21_dataset.md  installation.md  pretrain_internvla_a1_5_with_interndata_a1.md
policy/InternVLA_A1_5/internvla_a1_5/util_scripts/: add_special_tokens_to_qwen35.py  compute_norm_stats_multi.py  compute_norm_stats_single.py  convert_robotwin.py  robotwin_result_stats.py
policy/LDA_1B/LDA-1B/: LICENSE  README.md  pyproject.toml  requirements.txt
policy/LDA_1B/LDA-1B/eval/: video_gen.py  video_gen.sh
policy/LDA_1B/LDA-1B/examples/: eval_protocol.md
policy/LDA_1B/LDA-1B/xpolicylab_adapter/: _artifact_paths.sh  accelerate_zero2.yaml  gr00t_action_dim.py  process_data.py
policy/Spirit_v15/spirit_v15/: .gitignore  LICENSE  README.md  pyproject.toml  requirements-base.txt  requirements-train.txt  requirements.txt  server.py  train.py
policy/Spirit_v15/spirit_v15/dataset/: __init__.py  dataset.py  transforms.py
policy/Spirit_v15/spirit_v15/model/: __init__.py  modeling_spirit_vla.py
policy/Spirit_v15/spirit_v15/robochallenge/: run_robochallenge.py
policy/Spirit_v15/spirit_v15/scripts/: convert_robotwin_to_spirit.py  convert_xpolicylab_to_spirit.py  prepare_xpolicylab_dataset.sh  run_finetune.sh  run_robochallenge.sh  run_robotwin_finetune.sh  train_robotwin_from_raw.sh  train_xpolicylab_converted.sh  train_xpolicylab_from_raw.sh
policy/Spirit_v15/spirit_v15/utils/: __init__.py  checkpoint.py  distributed.py  logger.py  normalization.py  sampling.py  tensor_ops.py  vlm_utils.py
policy/TinyVLA/: README.md  deploy.yml  eval.sh  install.sh  model.py  process_data.py  process_data.sh  pyproject.toml  setup_eval_policy_server.sh  train.py  train.sh
policy/TinyVLA/tinyvla/: .gitignore  README.md  eval_real_franka.py  requirements.txt  torch_utils.py  train_tinyvla.py
policy/TinyVLA/tinyvla/aloha_scripts/: constants.py
policy/TinyVLA/tinyvla/data_utils/: datasets.py  processor.py  rlds_to_h5py.py  utils.py
policy/TinyVLA/tinyvla/llava-pythia/: pyproject.toml
policy/TinyVLA/tinyvla/scripts/: process_ckpts.sh  train.sh
(+2349 files in other folders)
