[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyvla"
version = "0.1.0"
description = "TinyVLA for XPolicyLab"
readme = "tinyvla/README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["tinyvla/requirements.txt"] }

[tool.setuptools.packages.find]
where = [
    "tinyvla",
    "tinyvla/llava-pythia",
]
include = [
    "policy_heads*",
    "llava_pythia*",
    "data_utils*",
    "aloha_scripts*",
]
namespaces = true