[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwp-xpl"
version = "0.1.0"
description = "XPolicyLab-local Giga World Policy training package"
requires-python = ">=3.11"
# Version floors are aligned to the validated `gigaworld-policy` (a.k.a. gwpxpl)
# environment: Python 3.11, CUDA 12.8. See INSTALLATION.md.
dependencies = [
    "accelerate>=1.13.0",
    "av>=17.0.0",
    "bitsandbytes>=0.49.2",
    "came-pytorch>=0.1.3",
    "decord>=0.6.0",
    "deepspeed>=0.18.8",
    "diffusers>=0.37.1",
    "einops>=0.8.2",
    "ftfy>=6.3.1",
    "h5py>=3.16.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.8",
    "msgpack>=1.1.2",
    "numpydantic>=1.8.0",
    "numpy>=2.0",
    "opencv-python>=4.11.0",
    "packaging>=24.0",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "psutil>=7.2.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.10",
    "pynvml>=13.0.1",
    "pyyaml>=6.0",
    "safetensors>=0.7.0",
    "tqdm>=4.67.0",
    "transformers>=4.57.1",
    "tyro>=1.0.11",
    "wandb>=0.25.1",
    "websockets>=15.0",
    # PyTorch is installed from a CUDA-specific build. The validated env uses cu128
    # (torch 2.8.0+cu128 / torchvision 0.23.0+cu128). Install a matching CUDA build, e.g.:
    #   pip install torch==2.8.0 torchvision==0.23.0 --index-url https://download.pytorch.org/whl/cu128
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["world_action_model*"]
