# Copyright 2026 Shanghai AI Laboratory.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/InternRobotics/InternVLA-A1.5"
source = "https://github.com/InternRobotics/InternVLA-A1.5"
issues = "https://github.com/InternRobotics/InternVLA-A1.5/issues"

[project]
name = "internvla-a1-5"
version = "1.0.0"
description = "InternVLA-A1.5 training and evaluation code for vision-language-action robot policies"
readme = "README.md"
license = { text = "CC BY-NC-SA 4.0" }
requires-python = ">=3.10"
authors = [
    { name = "Shanghai AI Laboratory" },
    { name = "InternRobotics" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: Free for non-commercial use",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["robotics", "machine learning", "deep learning", "vision-language-action", "imitation learning"]

dependencies = [
    # Hugging Face dependencies
    "datasets>=4.0.0,<4.2.0",
    "diffusers>=0.27.2,<0.36.0",
    "huggingface-hub[hf-transfer,cli]>=0.34.2",
    "accelerate>=1.10.0,<2.0.0",

    # Core dependencies
    "setuptools>=71.0.0,<81.0.0",
    "einops>=0.8.0,<0.9.0",
    "opencv-python-headless>=4.9.0,<4.13.0",
    "av>=15.0.0,<16.0.0",
    "jsonlines>=4.0.0,<5.0.0",
    "msgpack>=1.0.7,<2.0.0",
    "packaging>=24.2,<26.0",

    # PyTorch
    "torch>=2.2.1",
    "torchvision>=0.21.0",

    # Configuration and utilities
    "draccus>=0.10.0,<0.11.0",
    "omegaconf>=2.3.0,<3.0.0",
    "loguru>=0.7.0,<0.8.0",

    # Scientific computing
    "numpy>=1.26.0,<2.3.0",
    "scipy>=1.12.0,<1.16.0",

    # Experiment tracking
    "wandb>=0.20.0,<0.22.0",

    # Media processing
    "torchcodec>=0.2.1; sys_platform != 'win32' and (sys_platform != 'linux' or (platform_machine != 'aarch64' and platform_machine != 'arm64' and platform_machine != 'armv7l')) and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
    "imageio[ffmpeg]>=2.34.0,<3.0.0",
    "mediapy>=1.2.0,<2.0.0",

    # Other utilities
    "deepdiff>=7.0.1,<9.0.0",
    "termcolor>=2.4.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
]

# Optional dependencies
[project.optional-dependencies]

# Policy-specific dependencies
pi = [
    "safetensors>=0.4.3,<1.0.0",
]

internvla = [
    "safetensors>=0.4.3,<1.0.0",
    "flash-linear-attention>=0.2.0,<1.0.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

# All policies
policies = [
    "internvla-a1-5[pi]",
    "internvla-a1-5[internvla]",
]

# Development
dev = [
    "pre-commit>=3.7.0,<5.0.0",
    "ipython>=8.0.0,<9.0.0",
]

# Testing
test = [
    "pytest>=8.1.0,<9.0.0",
    "pytest-timeout>=2.4.0,<3.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
]

# All dependencies
all = [
    "internvla-a1-5[policies]",
    "internvla-a1-5[dev]",
    "internvla-a1-5[test]",
]

[project.scripts]
lerobot-train = "lerobot.scripts.lerobot_train:main"
lerobot-eval = "lerobot.scripts.lerobot_eval:main"
lerobot-data-stats = "lerobot.scripts.lerobot_data_stats:main"

# ---------------- Tool Configurations ----------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 110
exclude = ["tests/artifacts/**/*.safetensors", "*_pb2.py", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "T20", "N", "UP", "SIM"
]
ignore = [
    "E501",  # Line too long
    "T201",  # Print statement found
    "T203",  # Pprint statement found
    "B008",  # Perform function call in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["lerobot"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.typos]
default.extend-ignore-re = [
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
]
default.extend-ignore-identifiers-re = [
    "2nd",
    "pn",
    "ser",
    "ein",
    "thw",
    "inpt",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "lerobot.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "lerobot.configs.*"
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "lerobot.dataset_schemas.*"
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
