[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spirit-vla-opensource"
version = "0.1.0"
description = "Out-of-the-box reproduction of Spirit-v1.5 RoboChallenge results"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.57.1",
    "diffusers==0.35.2",
    "safetensors==0.5.3",
    "numpy==2.2.6",
    "pillow==10.4.0",
    "requests==2.32.5",
    "scipy==1.15.2",
    "accelerate>=1.13.0",
]

[project.optional-dependencies]
train = [
    "opencv-python>=4.8.0",
    "h5py>=3.10.0",
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
    "einops==0.8.1",
    "flash-attn==2.8.3",
]

[tool.setuptools.packages.find]
include = ["model*", "dataset*", "robochallenge*", "utils*"]
exclude = ["assets*", "outputs*", "scripts*"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.8.0"]
