[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-lerobot"
version = "0.1.0"
description = 'LeRobot-compatible dataset creation and loading without unnecessary dependencies'
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = []
dependencies = [
    "dataclasses_json",
    "numpy",
    "tqdm",
    "pyarrow",
    "av",
    "tyro",
    "h5py",
    "mcap",
    "mcap-ros1-support",
    "mcap-ros2-support",
    "opencv-python",
]